force-app/main/default/objects/SObjectHistory__c/SObjectHistory__c.object-meta.xml
<CustomObject>
    <label>SObject History</label>
    <nameField>
        <displayFormat>H-{00000000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SObject Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>