force-app/main/default/objects/SObjectHistory__c/fields/After__c.field-meta.xml
<CustomField>
    <fullName>After__c</fullName>
    <label>After</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>