force-app/main/default/objects/SObjectHistory__c/fields/Before__c.field-meta.xml
<CustomField>
    <fullName>Before__c</fullName>
    <label>Before</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>