force-app/main/default/objects/SObjectHistory__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <length>40</length>
    <type>Text</type>
</CustomField>